# stelf

./: .gitignore  .gitmodules  BUILD.md  Makefile  README.md  STYLE.md  dune-project  dune-workspace  hacking.sh  odoc-config.sexp  stelf.opam
src/: dune
src/Compile/: Assign.ml  Assign.mli  CompSyn.ml  CompSyn.mli  Compile_.ml  Compile_.mli  Cprint.ml  Cprint.mli  Subtree.ml  Subtree.mli  dune
src/Compress/: Compress_.ml  Compress_.mli  Reductio.ml  Sgn.ml  Sgn.mli  Syntax.ml  dune
src/Config/: CONFIG.ml  dune
src/Cover/: Cover_.ml  Cover_.mli  Total.ml  Total.mli  dune
src/Debug/: Debug.ml  Debug.mli
src/Display/: DISPLAY.ml  Display.ml  FORM.ml  Form.ml  Info.ml  Info.mli  dune
src/Domains/: Field.ml  Field.mli  Integers.ml  Integers.mli  IntegersMod.ml  OrderedField.ml  OrderedField.mli  Rationals.ml  Rationals.mli  dune
src/Error/: ERROR.ml  Error.ml  dune
src/Flit/: Flit_.ml  Flit_.mli  dune
src/Formatter/: Formatter.ml  Formatter_.ml  Formatter_.mli  dune
src/Frontend/: FQUERY.ml  Fquery.ml  Fquery.mli  Frontend_.ml  Frontend_.mli  Lexer.ml  Lexer.mli  PARSECONDEC.ml  PARSEMODE.ml  PARSEMODULE.ml  PARSEQUERY.ml  PARSER.ml  PARSETERM.ml  PARSETHM.ml  ParseCondec.ml  ParseCondec.mli  ParseFixity.ml  ParseFixity.mli  ParseMode.ml  ParseMode.mli  ParseModule.ml  ParseModule.mli  ParseQuery.ml  ParseQuery.mli  ParseTerm.ml  ParseTerm.mli  ParseThm.ml  ParseThm.mli  Parser.ml  Parser.mli  Parsing.ml  Parsing.mli  RECONCONDEC.ml  RECONMODE.ml  RECONMODULE.ml  RECONQUERY.ml  RECONTHM.ml  ReconCondec.ml  ReconCondec.mli  ReconMode.ml  (+17 more)
src/Global/: GLOBAL.ml  Global_.ml  Global_.mli  dune
src/Heuristic/: Heuristic_.ml  Heuristic_.mli  dune
src/Index/: Index.ml  IndexSkolem.ml  Index_.ml  Index_.mli  dune
src/IntInf/: IntInfSig.ml  IntInfSig.mli  dune
src/IntSyn/: APPROX.ml  Abstract.ml  Abstract.mli  Abstract_intf.ml  Approx.ml  Approx.mli  CONSTRAINTS.ml  Constraints.ml  Constraints.mli  Conv.ml  Conv.mli  Conv_intf.ml  Fgnopn.ml  Fgnopn.mli  IntSyn.ml  Intsyn_.ml  Intsyn_.mli  Intsyn_intf.ml  Lambda.ml  Lambda.mli  Lambda_.ml  Lambda_.mli  MATCH.ml  Match.ml  Match.mli  Order.ml  Order.mli  Order_intf.ml  Tomega.ml  Tomega.mli  Tomega_intf.ml  UNIFY.ml  Unify.ml  Unify.mli  Whnf.ml  Whnf.mli  Whnf_intf.ml  dune
src/M2/: Filling.ml  Filling.mli  Init.ml  Init.mli  Lemma.ml  Lemma.mli  M2_.ml  M2_.mli  MetaAbstract.ml  MetaAbstract.mli  MetaGlobal.ml  MetaGlobal.mli  MetaPrint.ml  MetaPrint.mli  Metasyn.ml  Metasyn.mli  Mpi.ml  Mpi.mli  Prover.ml  Prover.mli  Qed.ml  Qed.mli  Recursion.ml  Recursion.mli  Search.ml  Search.mli  Skolem.ml  Skolem.mli  Splitting.ml  Splitting.mli  Strategy.ml  Strategy.mli  dune
src/Meta/: Funnames.ml  Funnames.mli  Funprint.ml  Funprint.mli  Funsyn.ml  Funsyn.mli  Funtypecheck.ml  Funtypecheck.mli  Funweaken.ml  Funweaken.mli  Inference.ml  Inference.mli  Interpret.ml  Interpret.mli  MTPPROVER.ml  MtpAbstract.ml  MtpAbstract.mli  MtpData.ml  MtpData.mli  MtpFilling.ml  MtpFilling.mli  MtpGlobal.ml  MtpGlobal.mli  MtpInit.ml  MtpInit.mli  MtpMpi.ml  MtpMpi.mli  MtpPrint.ml  MtpPrint.mli  MtpProver.ml  MtpProver.mli  MtpRecursion.ml  MtpRecursion.mli  MtpSearch.ml  MtpSearch.mli  MtpSplitting.ml  MtpSplitting.mli  MtpStrategy.ml  MtpStrategy.mli  Relfun.ml  (+8 more)
src/Modes/: Modecheck.ml  Modecheck.mli  Modedec.ml  Modedec.mli  Modeprint.ml  Modeprint.mli  Modes_.ml  Modesyn.ml  Modesyn.mli  Modetable.ml  Modetable.mli  dune
src/Modules/: Modsyn.ml  Modsyn.mli  Modules_.mli  dune
src/Msg/: Msg_.ml  Msg_.mli  dune
src/Names/: Names.ml  Names.mli  Names_.ml  Names_.mli  dune
src/Netserver/: Netserver_.ml  Netserver_.mli  dune
src/Opsem/: Absmachine.ml  Absmachine.mli  AbsmachineSbt.ml  AbsmachineSbt.mli  AbstractTabled.ml  AbstractTabled.mli  MemoTable.ml  MemoTable.mli  Opsem_.mli  Ptrecon.ml  Ptrecon.mli  SubtreeInst.ml  SubtreeInst.mli  SwSubtree.ml  SwSubtree.mli  TableParam.ml  TableParam.mli  TabledMachine.ml  TabledMachine.mli  Trace.ml  Trace.mli  dune
src/Order/: Order.ml  Order_.ml  Order_.mli  dune
src/Paths/: ORIGINS.ml  Origins.ml  Origins.mli  Paths.mli  Paths_.ml  Paths_.mli  dune
src/Print/: ClausePrint.ml  ClausePrint.mli  PRINT.ml  Print.mli  PrintOmdoc.ml  PrintOmdoc.mli  PrintTwega.ml  PrintTwega.mli  PrintXml.ml  PrintXml.mli  Print_.ml  Print_.mli  Symbol.ml  Symbol.mli  Traverse.ml  Traverse.mli  dune
src/Prover/: Data.ml  Data.mli  Elim.ml  Elim.mli  Fill.ml  Fill.mli  Fixedpoint.ml  Fixedpoint.mli  Interactive.ml  Interactive.mli  Introduce.ml  Introduce.mli  Psearch.ml  Psearch.mli  Pweaken.ml  Pweaken.mli  Split.ml  Split.mli  State.ml  State.mli  dune
src/Recon/: RECON.ml  RECON_CONDEC.ml  RECON_MODE.ml  RECON_MODULE.ml  RECON_QUERY.ml  RECON_TERM.ml  RECON_THM.ml  Recon.ml  ReconConDec.ml  ReconMode.ml  ReconModule.ml  ReconQuery.ml  ReconTerm.ml  ReconThm.ml  S.ml  dune
src/Resugar/: ConDec.ml  RESUGAR.ml  Resugar.ml  Term.ml  dune
src/Server/: Server.mli  Server_.ml  Server_.mli  Sigint.ml  Sigint.mli  dune
src/Smlofnj/: Smlofnj.ml  Smlofnj.mli
src/Solvers/: Cs.ml  Cs.mli  CsEqBools.ml  CsEqField.ml  CsEqField.mli  CsEqIntegers.ml  CsEqIntegers.mli  CsIntegersWord.ml  CsManager.ml  CsManager.mli  SOLVERS.ml  Solvers_.ml  Solvers_.mli  dune
src/Stream/: Stream_.ml  Stream_.mli  dune
src/Style/: Style_.ml  Style_.mli  dune
src/Subordinate/: Intset.ml  Intset.mli  Subordinate_.ml  Subordinate_.mli  dune
src/Table/: HashTable.ml  Queue.ml  Queue.mli  RedBlackSet.ml  RedBlackSet.mli  Ring.ml  Ring.mli  SparseArray.ml  SparseArray.mli  SparseArray2.ml  SparseArray2.mli  StringHash.ml  StringHash.mli  Table_.ml  Table_.mli  dune
src/Tabling/: Tabledsyn.ml  Tabledsyn.mli  dune
src/Terminate/: Checking.ml  Checking.mli  Reduces.ml  Reduces.mli  dune
src/Thm/: Thm_.ml  Thm_.mli  Thmprint.ml  Thmprint.mli  Thmsyn.ml  Thmsyn.mli  dune
src/Timing/: Timers.ml  Timers.mli  Timing_.ml  Timing_.mli  dune
src/Tomega/: Converter.ml  Converter.mli  Coverage.ml  Coverage.mli  NORMALIZE.ml  Normalize.ml  Normalize.mli  Opsem.ml  Opsem.mli  Redundant.ml  Redundant.mli  dune  (+12 more)
(+368 files in other folders)
