(library
 (name stelf)
 (public_name stelf)
 (libraries
  compile
  compress
  cover
  domains
  flit
  formatter
  frontend
  global
  heuristic
  index
  intInf
  ; inverse
  intsyn
  m2
  meta
  modes
  modules
  msg
  names
  netserver
  opsem
  order
  paths
  print
  prover
  
  debug
  solvers
  stream
  style
  subordinate
  table
  tabling
  terminate
  thm
  timing
  tomega_lib
  trail
  typecheck
  unique
  worldcheck))
