; (include sources.dune)

(library
 (name index)
 (public_name stelf.index)
 (modules IndexSkolem Index_ INDEX)
 (libraries display intsyn table global basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Intsyn
   -open
   Intsyn.Lambda_
   -open
   Table
   -open
   Table.Table_
   -open
   Global
   -open
   Global.Global_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
