; (include sources.dune)

(library
 (name intsyn)
 (public_name stelf.intsyn)
 (modules
  Fgnopn
  Fgnopntable
  Order
  IntSyn
  Intsyn_
  Whnf
  Conv
  Tomega
  Constraints
  Unify
  Match
  Abstract
  Approx
  INTSYN
  Lambda_
  ABSTRACT
  APPROX
  CONSTRAINTS
  CONV
  FGNOPN
  MATCH
  ORDER
  TOMEGA
  UNIFY
  WHNF)
 (libraries containers global trail table basis syntax debug)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global
   -open
   Global.Global_
   -open
   Trail
   -open
   Trail.Trail_
   -open
   Table
   -open
   Table.Table_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
