; (include sources.dune)

(library
 (name m2)
 (public_name stelf.m2)
 (modules
  MetaGlobal
  Skolem
  Metasyn
  MetaAbstract
  MetaPrint
  Init
  Search
  Lemma
  Splitting
  Filling
  Qed
  Recursion
  Strategy
  Prover
  Mpi
  M2_
  FILLING
  INIT
  LEMMA
  METAABSTRACT
  METAGLOBAL
  METAPRINT
  METASYN
  MPI
  PROVER
  QED
  RECURSION
  SEARCH
  SKOLEM
  SPLITTING
  STRATEGY)
 (libraries
  display
  stream
  global
  intsyn
  names
  modes
  paths
  formatter
  print
  typecheck
  terminate
  index
  thm
  opsem
  compile
  subordinate
  table
  timing
  debug
  solvers
  basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Stream
   -open
   Stream.Stream_
   -open
   Global
   -open
   Global.Global_
   -open
   Intsyn
   -open
   Intsyn.Lambda_
   -open
   Names
   -open
   Names.Names_
   -open
   Modes
   -open
   Modes.Modes_
   -open
   Paths
   -open
   Paths.Paths_
   -open
   Formatter
   -open
   Formatter__Formatter_
   -open
   Print
   -open
   Print.Print_
   -open
   Typecheck
   -open
   Typecheck.Typecheck_
   -open
   Terminate
   -open
   Terminate.Terminate_
   -open
   Index
   -open
   Index.Index_
   -open
   Thm
   -open
   Thm.Thm_
   -open
   Opsem
   -open
   Opsem.Opsem_
   -open
   Compile
   -open
   Compile.Compile_
   -open
   Subordinate
   -open
   Subordinate
   -open
   Table
   -open
   Table.Table_
   -open
   Timing
   -open
   Timing.Timing_
   -open
   Solvers
   -open
   Solvers.Solvers_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
