; (include sources.dune)

(library
 (name meta)
 (public_name stelf.meta)
 (modules
  Funsyn
  Funnames
  Funtypecheck
  Funprint
  Weaken
  MtpWeaken
  Funweaken
  Relfun
  Interpret
  Meta_
  MtpAbstract
  MtpInit
  MtpFilling
  MtpGlobal
  MtpData
  MtpMpi
  MtpRecursion
  MtpSearch
  Uniquesearch
  MtpSplitting
  Inference
  Statesyn
  MtpStrategy
  MtpPrint
  MtpProver
  FUNNAMES
  FUNPRINT
  FUNSYN
  FUNTYPECHECK
  FUNWEAKEN
  INFERENCE
  INTERPRET
  MTPABSTRACT
  MTPDATA
  MTPFILLING
  MTPGLOBAL
  MTPINIT
  MTPMPI
  MTPPRINT
  MTPPROVER
  MTPRECURSION
  MTPSEARCH
  MTPSPLITTING
  MTPSTRATEGY
  RELFUN
  STATESYN
  UNIQUESEARCH
  WEAKEN)
 (libraries
  display
  global
  trail
  table
  intsyn
  names
  formatter
  print
  subordinate
  modes
  typecheck
  index
  opsem
  compile
  heuristic
  timing
  solvers
  m2
  basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global
   -open
   Global.Global_
   -open
   Trail
   -open
   Trail.Trail_
   -open
   Table
   -open
   Table.Table_
   -open
   Intsyn
   -open
   Intsyn.Lambda_
   -open
   Names
   -open
   Names.Names_
   -open
   Formatter
   -open
   Formatter__Formatter_
   -open
   Print
   -open
   Print.Print_
   -open
   Subordinate
   -open
   Subordinate
   -open
   Modes
   -open
   Modes.Modes_
   -open
   Typecheck
   -open
   Typecheck.Typecheck_
   -open
   Index
   -open
   Index.Index_
   -open
   Opsem
   -open
   Opsem.Opsem_
   -open
   Compile
   -open
   Compile.Compile_
   -open
   Heuristic
   -open
   Heuristic.Heuristic_
   -open
   Timing
   -open
   Timing.Timing_
   -open
   Solvers
   -open
   Solvers.Solvers_
   -open
   M2
   -open
   M2.M2_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
