; (include sources.dune)

(library
 (name names)
 (public_name stelf.names)
 (modules Names_ NAMES)
 (libraries display table global intsyn basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Table
   -open
   Table.Table_
   -open
   Global
   -open
   Global.Global_
   -open
   Intsyn
   -open
   Intsyn.Lambda_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
