; (include sources.dune)

(library
 (name opsem)
 (public_name stelf.opsem)
 (modules
  TableParam
  AbstractTabled
  MemoTable
  SubtreeInst
  SwSubtree
  TabledMachine
  Absmachine
  AbsmachineSbt
  Ptrecon
  Trace
  Tmachine
  Swmachine
  Opsem_
  ABSMACHINE
  ABSMACHINESBT
  ABSTRACTTABLED
  MEMOTABLE
  PTRECON
  SWSUBTREE
  TABLEPARAM
  TABLEDMACHINE
  TRACE)
 (libraries
  display
  global
  table
  intsyn
  names
  print
  formatter
  index
  typecheck
  solvers
  subordinate
  tabling
  compile
  basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global
   -open
   Global.Global_
   -open
   Table
   -open
   Table.Table_
   -open
   Intsyn
   -open
   Intsyn.Lambda_
   -open
   Names
   -open
   Names.Names_
   -open
   Print
   -open
   Print.Print_
   -open
   Formatter
   -open
   Formatter__Formatter_
   -open
   Index
   -open
   Index.Index_
   -open
   Typecheck
   -open
   Typecheck.Typecheck_
   -open
   Solvers
   -open
   Solvers.Solvers_
   -open
   Subordinate
   -open
   Subordinate
   -open
   Compile
   -open
   Compile.Compile_
   -open
   CompSyn
   -open
   Assign
   -open
   Tabling))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
