; (include sources.dune)

(library
 (name print)
 (public_name stelf.print)
 (modules
  Symbol
  ClausePrint
  Print_
  Traverse
  PrintTwega
  PrintXml
  PrintOmdoc
  CLAUSEPRINT
  PRINT
  PRINTOMDOC
  PRINTTWEGA
  PRINTXML
  SYMBOL
  TRAVERSE)
 (libraries display intsyn names formatter basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Intsyn
   -open
   Intsyn.Lambda_
   -open
   Names
   -open
   Names.Names_
   -open
   Formatter
   -open
   Formatter__Formatter_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
