; (include sources.dune)

(library
 (name prover)
 (public_name stelf.prover)
 (modules
  State
  Psearch
  Data
  Fill
  Split
  Fixedpoint
  Introduce
  Elim
  Interactive
  Pweaken
  Prover_
  DATA
  ELIM
  FILL
  FIXEDPOINT
  INTERACTIVE
  INTRODUCE
  PSEARCH
  PWEAKEN
  SPLIT
  STATE)
 (libraries
  display
  tomega_lib
  intsyn
  global
  names
  print
  index
  modes
  typecheck
  table
  subordinate
  solvers
  opsem
  trail
  compile
  worldcheck
  formatter
  timing
  basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Tomega_lib
   -open
   Tomega_lib.Tomega_
   -open
   Intsyn
   -open
   Intsyn.Lambda_
   -open
   Global
   -open
   Global.Global_
   -open
   Names
   -open
   Names.Names_
   -open
   Print
   -open
   Print.Print_
   -open
   Index
   -open
   Index.Index_
   -open
   Modes
   -open
   Modes.Modes_
   -open
   Typecheck
   -open
   Typecheck.Typecheck_
   -open
   Table
   -open
   Table.Table_
   -open
   Subordinate
   -open
   Subordinate
   -open
   Solvers
   -open
   Solvers.Solvers_
   -open
   Opsem
   -open
   Trail
   -open
   Trail.Trail_
   -open
   Compile
   -open
   Compile.Compile_
   -open
   Worldcheck
   -open
   Worldcheck.Worldcheck_
   -open
   Formatter
   -open
   Formatter__Formatter_
   -open
   Timing
   -open
   Timing.Timing_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
