; (include sources.dune)

(library
 (name tabling)
 (public_name stelf.tabling)
 (modules Tabledsyn Tabled TABLEDSYN)
 (libraries display table intsyn print names paths index basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Table
   -open
   Table.Table_
   -open
   Intsyn
   -open
   Intsyn.Lambda_
   -open
   Print
   -open
   Print.Print_
   -open
   Names
   -open
   Names.Names_
   -open
   Paths
   -open
   Paths.Paths_
   -open
   Index
   -open
   Index.Index_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
