; (include sources.dune)

(library
 (name terminate)
 (public_name stelf.terminate)
 (modules Checking Reduces Terminate_ CHECKING REDUCES)
 (libraries
  display
  global
  trail
  intsyn
  names
  print
  formatter
  index
  subordinate
  paths
  solvers
  basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global
   -open
   Global.Global_
   -open
   Trail
   -open
   Trail.Trail_
   -open
   Intsyn
   -open
   Intsyn.Lambda_
   -open
   Names
   -open
   Names.Names_
   -open
   Print
   -open
   Print.Print_
   -open
   Formatter
   -open
   Formatter__Formatter_
   -open
   Index
   -open
   Index.Index_
   -open
   Subordinate
   -open
   Subordinate
   -open
   Paths
   -open
   Paths.Paths_
   -open
   Solvers
   -open
   Solvers.Solvers_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
