; (include sources.dune)

(library
 (name tomega_lib)
 (public_name stelf.tomega)
 (modules
  Opsem
  Converter
  TomegaTypecheck
  Tomegaprint
  Tomeganames
  TomegaUnify
  Normalize
  Coverage
  Redundant
  TomegaAbstract
  Tomega_
  CONVERTER
  COVERAGE
  NORMALIZE
  OPSEM
  REDUNDANT
  TOMEGAABSTRACT
  TOMEGATYPECHECK
  TOMEGAUNIFY
  TOMEGANAMES
  TOMEGAPRINT)
 (libraries
  display
  global
  intsyn
  worldcheck
  cover
  formatter
  names
  print
  typecheck
  subordinate
  meta
  modes
  trail
  basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global
   -open
   Global.Global_
   -open
   Intsyn
   -open
   Intsyn.Lambda_
   -open
   Worldcheck
   -open
   Worldcheck.Worldcheck_
   -open
   Cover
   -open
   Cover.Cover_
   -open
   Formatter
   -open
   Formatter__Formatter_
   -open
   Names
   -open
   Names.Names_
   -open
   Print
   -open
   Print.Print_
   -open
   Typecheck
   -open
   Typecheck.Typecheck_
   -open
   Subordinate
   -open
   Subordinate
   -open
   Meta
   -open
   Meta.Meta_
   -open
   Modes
   -open
   Modes.Modes_
   -open
   Trail
   -open
   Trail.Trail_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
