; (include sources.dune)

(library
 (name modules)
 (public_name stelf.modules)
 (modules Modsyn Modules_ Modsyn_intf)
 (libraries display global table intsyn names paths typecheck basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global
   -open
   Global.Global_
   -open
   Table
   -open
   Table.Table_
   -open
   Intsyn
   -open
   Intsyn.Lambda_
   -open
   Names
   -open
   Names.Names_
   -open
   Paths
   -open
   Paths.Paths_
   -open
   Typecheck
   -open
   Typecheck.Typecheck_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
