; (include sources.dune)

(library
 (name order)
 (public_name stelf.order)
 (modules Order_ Order_intf)
 (libraries display table intsyn basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Table
   -open
   Table.Table_
   -open
   Intsyn
   -open
   Intsyn.Lambda_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
