; (include sources.dune)

(library
 (name paths)
 (public_name stelf.paths)
 (modules Paths_intf Paths_ Origins_intf Origins)
 (libraries display intsyn global table basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Intsyn
   -open
   Intsyn.Lambda_
   -open
   Global
   -open
   Global.Global_
   -open
   Table
   -open
   Table.Table_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
