; (include sources.dune)

(library
 (name subordinate)
 (public_name stelf.subordinate)
 (modules
  Intset
  Subordinate_
  Intset_intf
  Subordinate_intf)
 (libraries
  global
  table
  intsyn
  names
  basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global
   -open
   Global.Global_
   -open
   Table
   -open
   Table.Table_
   -open
   Intsyn
   -open
   Intsyn.Lambda_
   -open
   Names
   -open
   Names.Names_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
